--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="pinwheelPage">
     <button onclick="retrieveOrGeneratePin()">Obter PINWHEEL</button>
     <p><a href="https://nubank.com.br/cobrar/tezyu/65ac71d4-2e7b-41ee-9fc0-362977b08070" target="_blank">REALIZAR PIX</a></p>
-    <p>Realize o PIX de R$20,00 e envie seu PINWHEEL e o comprovante de pagamento para o número +55 (48) 98433-0340 para ter acesso à nova página.</p>
+    <p>Para acessar a outra página, realize o PIX de R$20,00 e envie seu PINWHEEL e o comprovante de pagamento para o número +55 (48) 98433-0340 para ter acesso à nova página.</p>
   </div>
 
   <div id="unlockPage" class="hidden">
